<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation_public"
    app:startDestination="@id/navigation_about">
    <fragment
        android:id="@+id/navigation_about"
        android:name="com.koopey.view.fragment.AboutFragment"
        android:label="@string/label_about"
        tools:layout="@layout/about"/>
    <fragment
        android:id="@+id/navigation_asset_search"
        android:name="com.koopey.view.fragment.AssetSearchFragment"
        android:label="@string/label_asset_search" />
    <fragment
        android:id="@+id/navigation_my_assets"
        android:name="com.koopey.view.fragment.AssetMyListFragment"
        android:label="@string/label_my_assets" />
    <fragment
        android:id="@+id/navigation_assets"
        android:name="com.koopey.view.fragment.AssetListFragment"
        android:label="@string/label_assets" />
    <fragment
        android:id="@+id/navigation_asset_edit"
        android:name="com.koopey.view.fragment.AssetEditFragment"
        android:label="@string/label_my_asset" />
    <fragment
        android:id="@+id/navigation_asset_map"
        android:name="com.koopey.view.fragment.AssetMapFragment"
        android:label="@string/label_map" />
    <fragment
        android:id="@+id/navigation_asset_view"
        android:name="com.koopey.view.fragment.AssetViewFragment"
        android:label="@string/label_asset" />
    <fragment
        android:id="@+id/navigation_configuration"
        android:name="com.koopey.view.fragment.ConfigurationFragment"
        android:label="@string/label_configuration" />
    <fragment
        android:id="@+id/navigation_conversations"
        android:name="com.koopey.view.fragment.ConversationListFragment"
        android:label="@string/label_conversations" />
    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.koopey.view.fragment.DashboardFragment"
        android:label="@string/label_dashboard" />
    <fragment
        android:id="@+id/navigation_login"
        android:name="com.koopey.view.fragment.LoginFragment"
        android:label="@string/label_login"
        tools:layout="@layout/login"/>
    <fragment
        android:id="@+id/navigation_location_edit"
        android:name="com.koopey.view.fragment.LocationEditFragment"
        android:label="@string/label_location_edit"
        tools:layout="LocationEditFragment"/>
    <fragment
        android:id="@+id/navigation_location_list"
        android:name="com.koopey.view.fragment.LocationListFragment"
        android:label="@string/label_my_locations"
        tools:layout="LocationListFragment"/>
    <fragment
        android:id="@+id/navigation_location_view"
        android:name="com.koopey.view.fragment.LocationViewFragment"
        android:label="@string/label_location"
        tools:layout="LocationViewFragment"/>
    <fragment
        android:id="@+id/navigation_messages"
        android:name="com.koopey.view.fragment.MessageListFragment"
        android:label="@string/label_messages" />
    <fragment
        android:id="@+id/navigation_password_change"
        android:name="com.koopey.view.fragment.PasswordEditFragment"
        android:label="@string/label_password_change" />
    <fragment
        android:id="@+id/navigation_register"
        android:name="com.koopey.view.fragment.RegisterFragment"
        android:label="@string/label_register"/>
    <fragment
        android:id="@+id/navigation_transaction_edit"
        android:name="com.koopey.view.fragment.TransactionEditFragment"
        android:label="@string/label_transaction_edit" />
    <fragment
        android:id="@+id/navigation_transaction_search"
        android:name="com.koopey.view.fragment.TransactionSearchFragment"
        android:label="@string/label_transaction_search" />
    <fragment
        android:id="@+id/navigation_transaction_view"
        android:name="com.koopey.view.fragment.TransactionViewFragment"
        android:label="@string/label_transaction" />
    <fragment
        android:id="@+id/navigation_transactions"
        android:name="com.koopey.view.fragment.TransactionListFragment"
        android:label="@string/label_transactions" />
    <fragment
        android:id="@+id/navigation_user_edit"
        android:name="com.koopey.view.fragment.UserEditFragment"
        android:label="@string/label_user_edit" />
    <fragment
        android:id="@+id/navigation_users"
        android:name="com.koopey.view.fragment.UserListFragment"
        android:label="@string/label_users" />
    <fragment
        android:id="@+id/navigation_user_search"
        android:name="com.koopey.view.fragment.UserSearchFragment"
        android:label="@string/label_user_name_search" />
    <fragment
        android:id="@+id/navigation_user_view"
        android:name="com.koopey.view.fragment.UserViewFragment"
        android:label="@string/label_user" />
    <fragment
        android:id="@+id/navigation_my_locations"
        android:name="com.koopey.view.fragment.LocationListFragment"
        android:label="@string/label_locations" />
    <fragment
        android:id="@+id/navigation_images"
        android:name="com.koopey.view.fragment.ImageListFragment"
        android:label="ImageListFragment" />
    <fragment
        android:id="@+id/navigation_wallet_edit"
        android:name="com.koopey.view.fragment.WalletEditFragment"
        android:label="@string/label_wallet_edit"/>
    <fragment
        android:id="@+id/navigation_wallets"
        android:name="com.koopey.view.fragment.WalletListFragment"
        android:label="@string/label_wallets"/>
    <fragment
        android:id="@+id/navigation_wallet_view"
        android:name="com.koopey.view.fragment.WalletViewFragment"
        android:label="@string/label_wallet"/>


</navigation>