<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/itemRefresh"
        android:orderInCategory="100"
        android:title="@string/label_refresh"
        app:showAsAction="never" />
    <item
        android:id="@+id/itemLogout"
        android:orderInCategory="100"
        android:title="@string/label_logout"
        app:showAsAction="never" />
    <item
        android:id="@+id/itemConfiguration"
        android:orderInCategory="100"
        android:title="@string/label_configuration"
        app:showAsAction="never" />
    <item
        android:id="@+id/itemContact"
        android:icon="@drawable/ic_email_black_24dp"
        android:title="@string/label_message" />
    <item
        android:id="@+id/itemShare"
        android:icon="@drawable/ic_menu_share"
        android:title="@string/button_share" />
</menu>
