<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/navigation_login"
            android:icon="@drawable/ic_vpn_key_black_24dp"
            android:title="@string/label_login" />
        <item
            android:id="@+id/navigation_register"
            android:icon="@drawable/ic_person_add_black_24dp"
            android:title="@string/label_register" />
        <item
            android:id="@+id/navigation_about"
            android:icon="@drawable/ic_grade_black_24dp"
            android:title="@string/label_about" />
        <item
            android:id="@+id/navigation_contact"
            android:icon="@drawable/ic_email_black_24dp"
            android:title="@string/label_contact" />
        <item
            android:id="@+id/navigation_share"
            android:icon="@drawable/ic_menu_share"
            android:title="@string/button_share" />
    </group>
</menu>
