<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation_public"
    app:startDestination="@id/navigation_about">
    <fragment
        android:id="@+id/navigation_login"
        android:name="com.koopey.view.fragment.LoginFragment"
        android:label="@string/label_login"
        tools:layout="@layout/fragment_login"/>
    <fragment
        android:id="@+id/navigation_register"
        android:name="com.koopey.view.fragment.RegisterFragment"
        android:label="@string/label_register"/>
    <fragment
        android:id="@+id/navigation_about"
        android:name="com.koopey.view.fragment.AboutFragment"
        android:label="@string/label_about"
        tools:layout="@layout/fragment_about"/>
</navigation>