<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/wallet_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/label_horizontal_margin"
            android:gravity="left"
            android:layout_marginRight="@dimen/label_horizontal_margin"
            android:hint="@string/label_value"
            android:text="0.0"
            android:textSize="@dimen/font_super_size"
            android:layout_weight=".50"></TextView>

        <TextView
            android:id="@+id/txtDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/label_horizontal_margin"
            android:gravity="left"
            android:layout_marginRight="@dimen/label_horizontal_margin"
            android:hint="@string/label_value"
            android:text="0.0"
            android:textSize="@dimen/font_super_size"
            android:layout_weight=".50"></TextView>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <TextView
            android:id="@+id/txtValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/label_horizontal_margin"
            android:layout_weight=".1"
            android:gravity="left"
            android:layout_marginRight="@dimen/label_horizontal_margin"
            android:hint="@string/label_value"
            android:text="0.0"
            android:textSize="@dimen/font_super_size"
            ></TextView>

        <TextView
            android:id="@+id/lblCurrency"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_weight=".9"
            android:hint="@string/label_currency"
            android:text=""
            android:textSize="@dimen/font_content_size"
            ></TextView>

        </LinearLayout>

        <ImageView
            android:id="@+id/imgQRCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:background="@color/color_background_light"
            android:clickable="false"
            android:contentDescription="@string/label_description"
            android:focusable="false"
            android:scaleType="centerCrop"
            android:scrollbars="none"
            android:src="@drawable/ic_payment_black_24dp"></ImageView>
    </LinearLayout>
</LinearLayout>
